action menus, a mods screen that can switch a mod off, and notices in a tray; 15.0.0
Action menus: grids of buttons on one key. Press J, or set your own.

The mods screen lists what you are running and can switch your own mods off.

Notices: questions from mods wait in a tray on N instead of scrolling past in
chat.

Also here: a gametest source set on Pandorical's shared gametest.gradle, the
Pandorical 15 pin, and a pandorical.changelog.json carrying this note and an
overview, which the brief shows a new player and the mods screen shows on a
Changes tab.